<resources>
    <string name="app_name">Nechet Michailo</string>
    <string name="enter_personal_detail">Enter Personal Detail</string>
    <string name="add_bmi_details">Add BMI Details</string>
    <string name="name">Name</string>
    <string name="calculate_your_body_mass_index">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_details">BMI Details</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="hello">HELLO </string>
    <string name="you_are">, YOU ARE</string>
    <string name="moderateThinness">Moderate Thinness BMI range: 16kg/m2 - 17kg/m2</string>
    <string name="mildThinness">Mild Thinness BMI range: 17kg/m2 - 18.5kg/m2</string>
    <string name="normal">Normal BMI range: 18.5kg/m2 - 25kg/m2</string>
    <string name="overweight">Overweight BMI range: 25kg/m2 - 30kg/m2</string>
    <string name="obeseClassOne">Obese Class I BMI range: 30kg/m2 - 35kg/m2</string>
    <string name="obeseClassTwo">Obese Class II BMI range: 35kg/m2 - 40kg/m2</string>
    <string name="ponderal_index_10_64kg_m3">Ponderal Index: 10.64kg/m3</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
</resources>
